Fix button cropped text

--- a/userscript/style.css
+++ b/userscript/style.css
@@ -12,6 +12,7 @@
     align-items: center;
     justify-content: center;
     grid-column: -1;
+    min-width: max-content;
     &:hover {
         background-color: var(--button-color-background-hover);
     }
